--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "fp-ts": "^2.14.0"
+    "fp-ts": "^2.14.0",
+    "ts-node": "^10.9.1"
   }
 }
