--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
     "@types/jest": "^29.5.1",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "jest": "^29.5.0",
     "typescript": "^5.0.4"
   }
 }
